--- a/app/src/main/res/layout/activity_fill_form.xml
+++ b/app/src/main/res/layout/activity_fill_form.xml
@@ -12,9 +12,80 @@
 
 
 
+    <EditText
+        android:id="@+id/TextViewTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enter Your Full Name"
+        android:textSize="10pt">
+    </EditText>
+    <EditText
+        android:id="@+id/EditTextName"
+        android:layout_height="wrap_content"
+        android:textSize="10pt"
+        android:text="Enter Your Phone Number"
+        android:layout_width="wrap_content">
+    </EditText>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Choose Your Blood Group"/>
+    <Spinner
+        android:id="@+id/spinner1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
 
+        android:entries="@array/bloodgroup_arrays"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Choose Your BirthDate"/>
+    <DatePicker
+        android:id="@+id/datePicker1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:calendarViewShown="false"
+        android:datePickerMode="spinner" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Choose Your Location"/>
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
 
+        android:entries="@array/Provinces_arrays"
+        />
+    <RadioButton android:id="@+id/radio_yes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="yes"
+        android:onClick="onRadioButtonClicked"
+        android:checked="true"
+        />
+    <RadioButton android:id="@+id/radio_no"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="no"
+        android:onClick="onRadioButtonClicked"
+        android:checked="false"
+        />
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="If You Have Any Health Problem"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="165dp" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:text="submit" />
 </LinearLayout>
 
 </ScrollView>
