--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,9 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="20dp"
         android:layout_weight="1"
-        android:src="@drawable/recever" />
+        android:src="@drawable/recever"
+
+        />
 
     <ImageView
         android:id="@+id/imageView2"
