--- a/app/src/main/res/layout/activity_result_single.xml
+++ b/app/src/main/res/layout/activity_result_single.xml
@@ -37,4 +37,11 @@
         android:layout_width="wrap_content"
         android:layout_height="32dp"
         android:text="He Have Any Health Problem" />
+    <Button
+        android:id="@+id/bn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:text="contact"/>
 </LinearLayout>
