--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -25,11 +25,11 @@
             android:entries="@array/Provinces_arrays" />
 
         <Button
+            android:id="@+id/sch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_gravity="center"
-            android:text="Search"
-            />
+            android:text="Search" />
 </LinearLayout>
 </ScrollView>
