--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,9 +15,8 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="20dp"
         android:layout_weight="1"
-        android:src="@drawable/recever"
+        android:src="@drawable/recever" />
 
-        />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -27,8 +27,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="20dp"
         android:layout_weight="1"
-        android:src="@drawable/donation"
-        />
+        android:src="@drawable/donation" />
 
 
 </LinearLayout>
