--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -13,15 +13,15 @@
         <Spinner
             android:id="@+id/spinner1"
             android:layout_width="match_parent"
+            android:layout_margin="10dp"
             android:layout_height="141dp"
-
             android:entries="@array/bloodgroup_arrays" />
 
         <Spinner
             android:id="@+id/spinner2"
             android:layout_width="match_parent"
+            android:layout_margin="10dp"
             android:layout_height="112dp"
-
             android:entries="@array/Provinces_arrays" />
 
         <Button
