--- a/app/src/main/res/layout/activity_request_call.xml
+++ b/app/src/main/res/layout/activity_request_call.xml
@@ -17,6 +17,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:inputType="phone"
+        android:digits="0123456789+"
         android:hint="Enter Phone Number" />
 
     <EditText
