--- a/app/src/main/res/layout/activity_request_call.xml
+++ b/app/src/main/res/layout/activity_request_call.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".requestCall">
+    tools:context=".requestCall"
+    >
 
     <EditText
         android:layout_width="wrap_content"
