--- a/app/src/main/res/layout/resultlist.xml
+++ b/app/src/main/res/layout/resultlist.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="10dp"
         android:padding="10dp"
         android:text="month"
-        android:textColor="#fff"
+        android:textColor="#000"
         android:textStyle="bold"
 
         android:textSize="22dp" />
@@ -28,7 +28,6 @@
         android:layout_marginTop="10dp"
         android:text="Status"
         android:textStyle="bold"
-        
         android:textSize="22dp" />
 
 </RelativeLayout>
