--- a/app/src/main/res/layout/activity_result_single.xml
+++ b/app/src/main/res/layout/activity_result_single.xml
@@ -9,37 +9,40 @@
     >
 
     <TextView
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
         android:layout_margin="10dp"
         android:text="Name" />
 
+    <TextView
+
+        android:id="@+id/age"
+        android:layout_width="wrap_content"
+        android:layout_height="32dp"
+        android:layout_margin="10dp"
+        android:text="age" />
 
     <TextView
+
+        android:id="@+id/bloodgroup"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
         android:layout_margin="10dp"
         android:text="BloodGroup" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:layout_margin="10dp"
-        android:text="Phone Number" />
+
 
     <TextView
+        android:id="@+id/address"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
         android:layout_margin="10dp"
         android:text="Location" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:layout_margin="10dp"
-        android:text="He Donate Before" />
 
     <TextView
+        android:id="@+id/health"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
         android:layout_margin="10dp"
