--- a/app/src/main/res/layout/activity_request_call.xml
+++ b/app/src/main/res/layout/activity_request_call.xml
@@ -9,12 +9,15 @@
     >
 
     <EditText
+        android:id="@+id/nameR"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:hint="Enter Name" />
 
     <EditText
+
+        android:id="@+id/numberR"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -23,12 +26,14 @@
         android:hint="Enter Phone Number" />
 
     <EditText
+        android:id="@+id/hospitalR"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:hint="Enter Hospital Name" />
 
     <Button
+        android:id="@+id/callR"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
